[project]
name = "pymolresponse"
description = "Molecular frequency-dependent response properties for arbitrary operators"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Eric Berquist", email = "eric.berquist@gmail.com" }
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "attrs>=24.3.0,<25",
    "cclib>=1.8.1,<2",
    "periodictable>=2.0.2,<3",
]

[project.urls]
"Bug Tracker" = "https://github.com/berquist/pymolresponse/issues"
Documentation = "https://berquist.github.io/pymolresponse_docs/"
Homepage = "https://github.com/berquist/pymolresponse"

[project.optional-dependencies]
test = [
    "coverage",
    "daltools",
    "pyscf",
    "pytest",
    "pytest-cov",
    "pytest-ruff",
]
docs = [
    "numpydoc",
    "sphinx",
    "sphinx_rtd_theme",
]
dev = ["pymolresponse[docs,test]"]

[build-system]
requires = ["setuptools>=61.0", "versioningit>=3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
# include-package-data = false

# [tool.setuptools.packages.find]
# namespaces = false
# where = ["."]

# [tool.setuptools.package-data]
# pymolresponse2 = [
#     "py.typed"
# ]

[tool.setuptools.package-dir]
pymolresponse = "pymolresponse"

[tool.coverage.html]
directory = "build/coverage/htmlcov"

[tool.coverage.run]
branch = true
data_file = "build/coverage/.coverage"

[tool.coverage.xml]
output = "build/coverage/coverage.xml"

[tool.doc8]
ignore = "D001"

[tool.isort]
profile = "black"
line_length = 100
# default is FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
sections = ["FUTURE", "STDLIB", "ATTRS", "THIRDPARTY", "CHEMISTRY", "FIRSTPARTY", "LOCALFOLDER"]
known_attrs = ["attr"]
known_chemistry = ["psi4", "pyscf"]

[tool.mypy]
cache_dir = "build/.mypy_cache"
strict = true
warn_unreachable = true

scripts_are_modules = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "psi4",
    "pyscf",
]
ignore_missing_imports = true

[tool.pyright]
# apparently respecting .gitignore is overrated
ignore = [
    "build"
]
# not inherited for some reason
pythonVersion = "3.6"
# TODO
typeCheckingMode = "off"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html --cov-report=xml --ruff --ruff-format"
cache_dir = "build/.pytest_cache"

[tool.ruff]
cache-dir = "build/.ruff_cache"
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = ["future", "standard-library", "attrs", "third-party", "chemistry", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"attrs" = ["attr"]
"chemistry" = ["psi4", "pyscf"]

[tool.versioningit.format]
method = {module = "versioningit_override", value = "pymolresponse_format", module-dir = "tools"}

[tool.versioningit.template-fields.version-tuple]
pep440 = true

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.write]
file = "pymolresponse/_version.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
pymolresponse = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "docs", "test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
mypy = "==1.19.1"
psi4 = ">=1.9.1,<2"
# already handled via PyPI to get support across all platforms
# pyscf = ">=2.6.2,<3"
# these are all for mypy
ruamel_yaml = "*"
scipy-stubs = "*"
types-PyYAML = "*"
versioningit = "*"

[tool.pixi.feature.test.tasks]
lint = { cmd = [
    "python", "-m", "mypy", "."
] }
test = { cmd = [
    "python", "-m", "pytest"
] }

[tool.ty.environment]
python = ".pixi/envs/dev/bin/python"

[tool.ty.rules]
unused-ignore-comment = "error"
